--- a/defaults.env
+++ b/defaults.env
@@ -1,6 +1,5 @@
-
 # The data dir for the gocd server
-GO_DATA_DIR~/.gocd-tools/data
+GO_DATA_DIR=~/.gocd-tools/data
 
 # The directory where the secrets input are kept.
 GO_SECRET_DIR=~/.gocd-tools/secrets
