--- a/defaults.env
+++ b/defaults.env
@@ -1,5 +1,8 @@
+# URL base endpoint
 GOCD_BASE_URL=""
 
+# The personal auth token that is generated after
+# the server has been initialized
 GOCD_AUTH_TOKEN=""
 
 # The data dir for the gocd server
