Update the gocd pipeline name to be the same as the package name

--- a/1.gocd.yml
+++ b/1.gocd.yml
@@ -3,9 +3,9 @@ environments:
     environments:
       GIT_USER: "{{SECRET:[github][username]}}"
     pipelines:
-      - gocd_tools
+      - gocd-tools
 pipelines:
-  gocd_tools:
+  gocd-tools:
     group: pypi_package
     locking: off
     materials:
