--- a/Makefile.venv
+++ b/Makefile.venv
@@ -1,6 +1,7 @@
 VENV_NAME=venv
 VENV=$(VENV_NAME)/bin
 ACTIVATE_FILE=$(VENV)/activate
+PYTHON=$(VENV)/python3
 
 #
 # Interactive shells
@@ -42,23 +43,7 @@ endif
 endif
 
 ifndef PY
-_PY_OPTION:=$(VENV_NAME)/bin/python
-ifeq (ok,$(shell $(_PY_OPTION) -c "print('ok')" $(NULL_STDERR)))
-PY=$(_PY_OPTION)
-$(info $(_PY_AUTODETECT_MSG))
-endif
-endif
-
-ifndef PY
-_PY_OPTION:=$(subst /,\,$(VENV_NAME)/Scripts/python)
-ifeq (ok,$(shell $(_PY_OPTION) -c "print('ok')" $(NULL_STDERR)))
-PY=$(_PY_OPTION)
-$(info $(_PY_AUTODETECT_MSG))
-endif
-endif
-
-ifndef PY
-_PY_OPTION:=py -3
+_PY_OPTION:=$(VENVDIR)/bin/python
 ifeq (ok,$(shell $(_PY_OPTION) -c "print('ok')" $(NULL_STDERR)))
 PY=$(_PY_OPTION)
 $(info $(_PY_AUTODETECT_MSG))
