--- a/1.gocd.yml
+++ b/1.gocd.yml
@@ -8,6 +8,10 @@ pipelines:
   gocd-tools:
     group: pypi_package
     locking: off
+    timer:
+      # Run on the 1st at 00:00 of every month
+      spec: "0 0 0 1 * ? *"
+      only_on_changes: no
     materials:
       gocd_tools_git:  # this is the name of material
         # says about type of material and url at once
