Add missing pypi reference values

--- a/1.gocd.yml
+++ b/1.gocd.yml
@@ -1,7 +1,9 @@
 environments:
-  pypi_package:
+  gocd_tools:
     environments:
       GIT_USER: "{{SECRET:[github][username]}}"
+      TWINE_USERNAME: "{{SECRET:[gocd_tools][username]}}"
+      TWINE_PASSWORD: "{{SECRET:[gocd_tools][password]}}"
     pipelines:
       - gocd-tools
 pipelines:
