Adjust naming of pypi environment variables for the GOCD CI

--- a/1.gocd.yml
+++ b/1.gocd.yml
@@ -2,8 +2,8 @@ environments:
   gocd_tools:
     environments:
       GIT_USER: "{{SECRET:[github][username]}}"
-      TWINE_USERNAME: "{{SECRET:[gocd_tools][username]}}"
-      TWINE_PASSWORD: "{{SECRET:[gocd_tools][password]}}"
+      PYPI_USERNAME: "{{SECRET:[gocd_tools][username]}}"
+      PYPI_PASSWORD: "{{SECRET:[gocd_tools][password]}}"
     pipelines:
       - gocd-tools
 pipelines:
