Ensure that the gocd_tools environment can be associated with the GOCD CI pipeline

--- a/1.gocd.yml
+++ b/1.gocd.yml
@@ -3,6 +3,8 @@ environments:
     environment_variables:
       PYPI_USERNAME: "{{SECRET:[gocd_tools][username]}}"
       PYPI_PASSWORD: "{{SECRET:[gocd_tools][password]}}"
+    pipelines:
+      - gocd-tools
 pipelines:
   gocd-tools:
     group: pypi_package
