Update the GoCD naming

--- a/1.gocd.yml
+++ b/1.gocd.yml
@@ -30,9 +30,8 @@ pipelines:
         destination: publish-python-scripts
     parameters:
       SRC_DIRECTORY: gocd-tools
-      BUILD_ARGS: install
+      BUILD_MAKE_ARGS: install
       TEST_DIRECTORY: gocd-tools
-      TEST_MAKE_TARGET: test
-      TEST_ARGS: ''
+      TEST_MAKE_ARGS: test
       PUSH_DIRECTORY: publish-python-scripts
     template: pypi_package
